--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,33 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="ToolbarText">
+        <item name="fontFamily">@font/montserrat_semibold</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+    
+    <style name="ShipmentHeader">
+        <item name="android:textColor">@color/shipment_header</item>
+        <item name="android:textSize">11sp</item>
+        <item name="fontFamily">@font/montserrat_semibold</item>
+        <item name="android:lineHeight" tools:targetApi="p">16sp</item>
+        <item name="lineHeight">16sp</item>
+    </style>
+
+    <style name="ShipmentBody">
+        <item name="android:textColor">@color/shipment_items</item>
+        <item name="android:textSize">15sp</item>
+        <item name="fontFamily">@font/montserrat_bold</item>
+        <item name="android:lineHeight" tools:targetApi="p">24sp</item>
+        <item name="lineHeight">24sp</item>
+    </style>
+
+    <style name="ShipmentNumber">
+        <item name="android:textColor">@color/shipment_items</item>
+        <item name="android:textSize">15sp</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:lineHeight" tools:targetApi="p">24sp</item>
+        <item name="lineHeight">24sp</item>
+    </style>
 </resources>
