--- a/app/src/main/res/layout/shipment_item_loading.xml
+++ b/app/src/main/res/layout/shipment_item_loading.xml
@@ -24,6 +24,7 @@
         style="@style/ShipmentNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/header_text"
         android:layout_marginStart="@dimen/margin_horizontal"
         android:layout_marginEnd="@dimen/margin_sm"
         app:layout_constraintEnd_toStartOf="@+id/shipment_type_view"
@@ -33,13 +34,13 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/shipment_type_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:background="@color/header_text"
         android:layout_marginTop="@dimen/margin_shipment_type"
         android:layout_marginEnd="@dimen/margin_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_kurier" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_view"
@@ -66,34 +67,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_horizontal"
+        android:background="@color/header_text"
         app:layout_constraintEnd_toStartOf="@id/guideline_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/shipment_status_header_view"
         tools:text="Gotowa do odbioru" />
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/shipment_secondary_status_header_view"
-        style="@style/ShipmentHeader"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_horizontal"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@id/guideline_view"
-        app:layout_constraintTop_toTopOf="@id/shipment_status_header_view"
-        tools:text="@string/status_other" />
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/shipment_date_view"
-        style="@style/ShipmentNumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        android:layout_marginEnd="@dimen/margin_horizontal"
-        android:layout_marginStart="@dimen/margin_horizontal"
-        app:layout_constraintStart_toStartOf="@id/guideline_view"
-        app:layout_constraintTop_toBottomOf="@id/shipment_secondary_status_header_view"
-        tools:text="pn. | 14.06.18 | 11:30" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/shipment_user_header_view"
@@ -110,6 +88,7 @@
         android:id="@+id/shipment_user_view"
         style="@style/ShipmentBody"
         android:layout_width="0dp"
+        android:background="@color/header_text"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_horizontal"
         android:layout_marginEnd="@dimen/margin_sm"
