--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,4 +42,12 @@
         <item name="android:lineHeight" tools:targetApi="p">24sp</item>
         <item name="lineHeight">24sp</item>
     </style>
+
+    <style name="ShipmentListHeader">
+        <item name="android:textColor">@color/header_text</item>
+        <item name="android:textSize">13sp</item>
+        <item name="fontFamily">@font/montserrat_semibold</item>
+        <item name="android:lineHeight" tools:targetApi="p">16sp</item>
+        <item name="lineHeight">16sp</item>
+    </style>
 </resources>
