--- a/app/src/main/res/layout/fragment_shipment_list.xml
+++ b/app/src/main/res/layout/fragment_shipment_list.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/refresh_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.shipments.ShipmentListFragment">
+    tools:context=".ui.fragments.shipments.ShipmentListFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/shipments_view"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/shipment_list_menu"
+        app:title="InPost recruitment task"
+        app:titleTextAppearance="@style/ToolbarText" />
 
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_view"
+        tools:context=".ui.fragments.shipments.ShipmentListFragment">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/shipments_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/shipment_bg" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
